Bug 377545 - Drag & Drop Plasmoids Out of the Panel is broken
Summary: Drag & Drop Plasmoids Out of the Panel is broken
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 5.32.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-12 23:21 UTC by electricprism
Modified: 2017-03-15 14:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description electricprism 2017-03-12 23:21:46 UTC
Bug Demonstration: https://youtu.be/EIKQcxcCmyQ

Dragging Plasmoids out of the panel is often not successful.

A. Most of the time the plasmoid tweaks out and fails to relocate to the desktop.

B. Sometimes the plasmoid enters a hidden area of the panel which is not visible

C. Eventually the Plasmoid will break and have no header bar and no longer respond to drag & drop operations until plasma-shell is restarted.

In the case of this video showcasing the behavior, I attempt to have a left and right panel on the bottom and drag Plasmoids in and out and to the other Panel.

Requested Fixes:

1. Fix Drag & Drop In and Out of the Panel

2. Don't Allow Plasmoids to be relocated to a invisible part of the panel.

3. (Extra) In the case of the System Tray, I would like the Panel to expand if it isn't large enough to the a minimum size according to the required width of the Plasmoids the panel contains. Eg: The Bottom Right panel should have a minimum size of System Tray + Clock and whatever else is in there it can't go below.
Comment 1 Deleted User 2017-03-13 08:46:11 UTC
Should this not be filed under Product "plasmashell" Component "Panel" ?

libplasma and frameworks-plasma is more for the Plasma's internal library.
Comment 2 Marco Martin 2017-03-15 14:03:05 UTC
Git commit 7f2dceb95c5812207c87f4b61d5a90e0306603d6 by Marco Martin.
Committed on 15/03/2017 at 13:59.
Pushed by mart into branch 'Plasma/5.8'.

manage mouse events when out of the window

mouseareas must support event grabbing when the mouse is out of the window too

M  +2    -2    shell/panelview.cpp

https://commits.kde.org/plasma-workspace/7f2dceb95c5812207c87f4b61d5a90e0306603d6