manage mouse events when out of the window

mouseareas must support event grabbing when the mouse is out of the window too
BUG:377545